# gradu_code

./: CODE_OF_CONDUCT.md  README.md  pyproject.toml
raw_data/: 2.xlsx  3.xlsx  5.xlsx  7.xlsx  9.xlsx
src/: miNNseq.py  run.sh  stable_test.py  util.py
src/rpca/: RPCA.py  choosvd.py  extendedRCPA.py
