[tool.poetry]
name = "benke"
version = "0.1.0"
description = ""
authors = ["liminghong.dev <lmh0066@outlook.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
openpyxl = "^3.1.2"
fancyimpute = "^0.7.0"
statannotations = "^0.6.0"
dalex = "^1.7.0"
missingno = "^0.5.2"
statsmodels = "^0.14.2"
jupyter = "^1.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
